package pt.ipp.isep.dei.esoft.project.domain.enums;

import java.io.Serializable;

/**
 * The enum Request type.
 */
public enum RequestType implements Serializable {
    /**
     * Sale request type.
     */
    SALE,
    /**
     * Lease request type.
     */
    LEASE

}
